# dj-drf

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  Dockerfile  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: scripts.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/authentication/: apps.py  models.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/config/: urls.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/config/settings/: base.py  development.py  production.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/core/: models.py  utils.py
